--- a/index.html
+++ b/index.html
@@ -1,72 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>CNIT 133 HW1</title>
-    <meta name="description" content="First homework for CNIT 133">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <meta name="description" content="First homework for CNIT 133" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand text-info" href="index.html">CNIT133</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Homeworks
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="hw2.html">Homework 2</a>
-                        <a class="dropdown-item" href="hw3.html">Homework 3</a>
-                        <a class="dropdown-item" href="hw4.html">Homework 4</a>
-                        <a class="dropdown-item" href="hw5.html">Homework 5</a>
-                        <a class="dropdown-item" href="hw6.html">Homework 6</a>
-                        <a class="dropdown-item" href="hw7.html">Homework 7</a>
-                        <a class="dropdown-item" href="hw8.html">Homework 8</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container">
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1><a href="index.html" class="text-info">CNIT133 Homework</a></h1>
-                <h2>Bryan Liang</h2>
+      <a class="navbar-brand text-info" href="index.html">CNIT133</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdownMenuLink"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Homeworks
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="hw2.html">Homework 2</a>
+              <a class="dropdown-item" href="hw3.html">Homework 3</a>
+              <a class="dropdown-item" href="hw4.html">Homework 4</a>
+              <a class="dropdown-item" href="hw5.html">Homework 5</a>
+              <a class="dropdown-item" href="hw6.html">Homework 6</a>
+              <a class="dropdown-item" href="hw7.html">Homework 7</a>
+              <a class="dropdown-item" href="hw8.html">Homework 8</a>
             </div>
-        </div>
-        <ul class="list-group">
-            <li class="list-group-item"><a href="hw2.html" class="hwlink text-danger">Homework 2</a></li>
-            <li class="list-group-item"><a href="hw3.html" class="hwlink" style="color: #FFA500">Homework 3</a></li>
-            <li class="list-group-item"><a href="hw4.html" class="hwlink text-warning">Homework 4</a></li>
-            <li class="list-group-item"><a href="hw5.html" class="hwlink text-success">Homework 5</a></li>
-            <li class="list-group-item"><a href="hw6.html" class="hwlink">Homework 6</a></li>
-            <li class="list-group-item"><a href="hw7.html" class="hwlink" style="color: #4B0082">Homework 7</a></li>
-            <li class="list-group-item"><a href="hw8.html" class="hwlink" style="color: #800080">Homework 8</a></li>
+          </li>
         </ul>
+      </div>
+    </nav>
+    <div class="container" style="margin-bottom: 2rem">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1><a href="index.html" class="text-info">CNIT133 Homework</a></h1>
+          <h2>Bryan Liang</h2>
+        </div>
+      </div>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <a href="hw2.html" class="hwlink text-danger">Homework 2</a>
+        </li>
+        <li class="list-group-item">
+          <a href="hw3.html" class="hwlink" style="color: #FFA500"
+            >Homework 3</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="hw4.html" class="hwlink text-warning">Homework 4</a>
+        </li>
+        <li class="list-group-item">
+          <a href="hw5.html" class="hwlink text-success">Homework 5</a>
+        </li>
+        <li class="list-group-item">
+          <a href="hw6.html" class="hwlink">Homework 6</a>
+        </li>
+        <li class="list-group-item">
+          <a href="hw7.html" class="hwlink" style="color: #4B0082"
+            >Homework 7</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="hw8.html" class="hwlink" style="color: #800080"
+            >Homework 8</a
+          >
+        </li>
+      </ul>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
